add s3Uri field to datasets response, and run go generate
